--- a/views/artist/artist.ejs
+++ b/views/artist/artist.ejs
@@ -8,8 +8,8 @@
             <div class="card shadow-lg">
               <div class="card-body">
                 <a class="text-decoration-none" href="/artist/<%= artist._id %>">
-                  <img class="album--img" src="<%= artist.image %>">
-                  <p class="album--name text-white text-center">
+                  <img class="artist--img" src="<%= artist.image %>">
+                  <p class="artist--name text-white text-center">
                     <%= artist.name %>
                   </p>
                 </a>
