--- a/views/album/album.ejs
+++ b/views/album/album.ejs
@@ -1,22 +1,19 @@
 <%- include("../partials/header.ejs") %>
-    
-        
-     
 <div class="col py-4">
-    <div class="album py-4">
+    <div class="album">
         <div class="container-fluid">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-6 g-3">
             <% album.forEach(function(album){ %>
               <div class="col">
                 <div class="card shadow-lg">
                   <div class="card-body">
-                    <a class="text-decoration-none" href="#">
+                    <a class="text-decoration-none" href="/album/<%= album._id %>">
                       <img class="album--img" src="<%= album.image %>">
                       <p class="album--name text-white">
                         <%= album.name %>
                       </p>
                       <p class="album--artist d-inline">
-                        Artist
+                        Album
                       </p>
                     </a>
                   </div>
