--- a/views/artist/artist-id.ejs
+++ b/views/artist/artist-id.ejs
@@ -2,80 +2,77 @@
 <% let count=1 %>
 <div class="col px-0">
     <div class="container-fluid px-0 bg-dark">
-        <div class="d-flex px-5 py-5">
+        <div class="d-flex px-5 py-4">
             <img class="artistinfo--img" src="<%= artist.image %>">
             <div class="songkit">
-                <div class="artistkit--up mt-2">
+                <div class="artistkit--up">
                     <p class="artistkit--up__name text-white mb-0"><%= artist.name %></p>
                     <p class="artistkit--up__artist m-0">Artist</p>
                     <p class="songcount"><%= artistsong.length %> songs</p>
                 </div>
-                <div class="songkit--down mt-3">
-                    <a class="mt-3 d-flex" href="#">
+                <div class="songkit--down">
+                    <a href="#">
                         <img class="playbtn" src="/image/icons/play.png">
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid row g-5 py-4">
-        <div class="col-md-8">
+   
+        <div class="container-fluid my-3 px-5">
             <table class="table text-white">
                 <tbody>
-            <% artistsong.forEach(function(artistsong){ %>
-                  <tr>
-                    <th>
-                        <div class="d-flex">
-                            <span class="songorder d-block pt-4"><%= count %></span>
-                            <% count++ %>
-                            <img class="songimg" src="<%= artistsong.image %>">
-                            <div class="pt-4">
-                                <%= artistsong.name %>
-                            </div>
-                        </div>
-                    </th>
-                    <td>
-                        <div class="option">
-                            <img class="p-2" src="/image/icons/play-button.png"  width="40px">  
-                            <img class="p-2" src="/image/icons/fav.png"  width="40px">
-                            <img class="p-2" src="/image/icons/plus.png"  width="40px">
-                        </div>
-                    </td>
-                  </tr>
-            <% }) %>
-                </tbody>
+                    <% artistsong.forEach(function(artistsong){ %>
+                          <tr>
+                            <th>
+                                <div class="d-flex">
+                                    <span class="songorder d-block pt-4"><%= count %></span>
+                                    <% count++ %>
+                                    <img class="songimg" src="<%= artistsong.image %>">
+                                    <a class="pt-4 text-white text-decoration-none" href="/song/<%= artistsong.id %>">
+                                        <%= artistsong.name %>
+                                    </a>
+                                </div>
+                            </th>
+                            <td>
+                                <div class="option">
+                                    <img class="p-2" src="/image/icons/play-button.png"  width="40px">  
+                                    <img class="p-2" src="/image/icons/fav.png"  width="40px">
+                                    <img class="p-2" src="/image/icons/plus.png"  width="40px">
+                                </div>
+                            </td>
+                          </tr>
+                    <% }) %>
+                        </tbody>
               </table>
         </div>
-    
-        <div class="col-md-4">
-          <div class="position-sticky" style="top: 2rem;">
-            <div class="py-4 mb-3 rounded">
-                <div class="d-flex justify-content-between">
-                    <h4 class="px-4 text-white">Other Artists</h4>
-                    <a class="seeall me-4 mt-2" href="/artist">see all</a>
-                </div>
-             
-              <table class="table text-white">
-                <tbody>
-            <% otherartist.forEach(function(otherartist){ %>
-                  <tr>
-                    <th>
-                        <div class="d-flex">
-                            <img class="songimg" src="<%= otherartist.image %>">
-                            <div class="pt-4">
-                                <%= otherartist.name %>
-                            </div>
-                        </div>
-                    </th>
-                  </tr>
-            <% }) %>
-                </tbody>
-              </table>
+        
+        <div class="album py-4">
+            <div class="container-fluid">
+              <div class="d-flex">
+                 <h1 class="category">Album by <%= artist.name %></h1>
+              </div>
+              <div class="row row-cols-1 row-cols-sm-2 row-cols-md-6 g-3">
+                <% album.forEach(function(album){ %>
+                  <div class="col">
+                    <div class="card shadow-lg">
+                      <div class="card-body">
+                        <a class="text-decoration-none" href="/album/<%= album._id %>">
+                          <img class="album--img" src="<%= album.image %>">
+                          <p class="album--name text-white">
+                            <%= album.name %>
+                          </p>
+                          <p class="album--album d-inline">
+                            <%= artist.name %>
+                          </p>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <% }) %>
+              </div>
             </div>
-          </div>
         </div>
-      </div>
-</div>
 
 
 
