--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
+<script>
+    $(document).ready(function(){
+      $(".navbar--search__size").keypress(function(){
+        $(this).hide();
+      });
+    });
+</script>
 <body>
     <nav class="sticky-top navbar navbar-expand-lg navbar-black bg-black">
         <div class="container-fluid">
@@ -19,20 +29,26 @@
                 <img src="/image/icons/webicon.png" alt="icons" width="25">
                 Life
             </a>
-            <div class="navbar--search">
-                <input class="form-control me-2 navbar--search__size" placeholder="Artists, Song">
-                <button class="btn btn-outline-info" type="submit">Search</button>
-            </div>
+            <form action="/search">
+                <input class="form-control me-2 navbar--search__size" type="search" placeholder="Artists, Song">
+            </form>
             <% if(!currentUser) { %>
             <div class="navbar--btn">
                 <a href="/login" class="navbar--btn__login">Login</a>
                 <a href="/register" class="navbar--btn__register">Register</a>
             </div>
             <% } else { %>
-                    <a class= "username text-white text-decoration-none" href="#">
-                         <img src="/image/icons/user.png" alt="usericons" width="35">
-                         <%= currentUser.username %>
-                    </a>
+                   
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn dropdown-toggle text-white fw-bold" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="/image/icons/user.png" alt="usericons" width="30">
+                            <%= currentUser.username %>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end bg-black">
+                          <li><a class="dropdown-item text-white" href="/profile">Your Profile</a></li>
+                          <li><a class="dropdown-item text-white" href="/logout">Log Out</a></li>
+                        </ul>
+                      </div>
             <% } %>
         </div>
       </nav>
@@ -46,12 +62,6 @@
                                     <img src="/image/icons/home.png" width="25rem">
                                     <span class="d-none d-sm-inline">HOME</span>
                                 </a> 
-                            </li>
-                            <li>
-                                <a href="/favourite" class="nav-link align-middle">
-                                   <img src="/image/icons/favourite.png" width="25rem">
-                                   <span class="d-none d-sm-inline">FAVOURITE</span> 
-                                </a>
                             </li>
                             <li>
                                 <a href="#" class="nav-link align-middle">
