--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,6 @@
-/* .sidebar {
-    top: 56px;
-    position: fixed;
-} */
+.alert{
+    margin: 0;
+}
 .nav{
     display: block;
 }
@@ -72,20 +71,16 @@
     left: 100%;
 }
 .card:hover{
-    padding: 1vh;
     background-color: transparent;
     background-color: rgba(164, 164, 164, 0.3);
     border: none;
 }
 .card{
     background-color: transparent;
-    padding: 1vh;
-    width: 10vw;
     border: none;
-    overflow: auto;
 }
 .card-body{
-    padding: 0;
+    padding: 0.5rem;
 }
 .songinfo--img,.albuminfo--img{
     height: 9rem;
@@ -98,18 +93,12 @@
 }
 .song--img,.album--img{
     width: 100%;
-    height: 9vw;
     object-fit: scale-down;
 }
 .songimg{
     height: 4.5rem;
     margin-left: 2rem;
     margin-right: 2rem;
-}
-.album--img{
-    width: 100%;
-    height: 9vw;
-    object-fit: scale-down;
 }
 .album--name{
     font-size: 2.1vh;
@@ -130,7 +119,6 @@
 .artist--img{
     width: 100%;
     border-radius: 100%;
-    height: 9vw;
     object-fit: scale-down;
 }
 .song--name, .artist--name,.album--name{
