--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,13 +15,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
-<script>
-    $(document).ready(function(){
-      $(".navbar--search__size").keypress(function(){
-        $(this).hide();
-      });
-    });
-</script>
 <body>
     <nav class="sticky-top navbar navbar-expand-lg navbar-black bg-black">
         <div class="container-fluid">
@@ -29,8 +22,8 @@
                 <img src="/image/icons/webicon.png" alt="icons" width="25">
                 Life
             </a>
-            <form action="/search">
-                <input class="form-control me-2 navbar--search__size" type="search" placeholder="Artists, Song">
+            <form action="/search" method="post">
+                <input onkeyup="updateResult(this.value)" class="form-control me-2 search navbar--search__size" type="search" name="keyword" placeholder="Artists, Song">
             </form>
             <% if(!currentUser) { %>
             <div class="navbar--btn">
@@ -52,10 +45,20 @@
             <% } %>
         </div>
       </nav>
+      <% if(error && error.length>0){ %>
+        <div class= 'alert alert-danger' role = 'alert'>
+          <%=  error %>
+        </div>
+      <% } %>
+      <% if(success && success.length>0){ %>
+        <div class= 'alert alert-success' role = 'alert'>
+          <%=  success %>
+        </div>
+      <% } %>
         <div class="container-fluid">
             <div class="row flex-nowrap">
                 <div class="col-auto bg-black">
-                    <div class="sidebar text-white min-vh-100">
+                    <div class="text-white min-vh-100">
                         <ul class="nav flex-column mb-0 align-items-sm-start">
                             <li>
                                 <a href="/" class="home nav-link align-middle">
@@ -81,6 +84,10 @@
                                     <span class="d-none d-sm-inline">ARTISTS</span> 
                                 </a>
                             </li>
-                        </ul>
+                        </ul> 
                     </div>
                 </div>
+                
+          
+                   
+                
