--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
-
+    <% if(error && error.length>0){ %>
+        <div class= 'alert alert-danger' role = 'alert'>
+          <%=  error %>
+        </div>
+      <% } %>
+      <% if(success && success.length>0){ %>
+        <div class= 'alert alert-success' role = 'alert'>
+          <%=  success %>
+        </div>
+      <% } %>
     
     
