--- a/views/song/song-id.ejs
+++ b/views/song/song-id.ejs
@@ -43,22 +43,49 @@
                   <tbody>
               <% othersong.forEach(function(othersong){ %>
                     <tr>
-                      <th>
-                          <div class="d-flex">
-                              <img class="songimg" src="<%= othersong.image %>">
-                              <div class="pt-4">
-                                  <%= othersong.name %><%= othersong.artist.name %>
-                              </div>
-                          </div>
+                      <th class="card">
+                            <div class="d-flex">
+                                <a class=" text-decoration-none" href="/song/<%= othersong._id %>">
+                                <img class="songimg" src="<%= othersong.image %>">
+                                <div class="pt-2">
+                                    <span class="song--name d-block"><%= othersong.name %></span>
+                                    <a class="song--artist" href="/artist/<%= songinfo.artist.id %>"><%= othersong.artist.name %></a>
+                                </div>
+                            </a>
+                            </div>
+                          
                       </th>
                     </tr>
               <% }) %>
                   </tbody>
                 </table>
+
+                <div class="d-flex justify-content-between">
+                    <h4 class="px-4 text-white">Other Artist</h4>
+                    <a class="seeall" href="/artist">see all</a>
+                </div>
+                <table class="table text-white">
+                    <tbody>
+                <% otherartist.forEach(function(otherartist){ %>
+                      <tr>
+                        <th>
+                            <div class="d-flex">
+                                <img class="songimg" src="<%= otherartist.image %>">
+                                <div class="pt-4">
+                                    <%= otherartist.name %>
+                                </div>
+                            </div>
+                        </th>
+                      </tr>
+                <% }) %>
+                    </tbody>
+                  </table>
+
               </div>
             </div>
           </div>
         </div>
+        
   
     </div>
 
