--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,14 +18,10 @@
                     <input type="password" class="form-control" name="password" placeholder="Enter your password" required>
                 </div>
                 <!-- <div class="mb-3">
-                    <label class="form-label">Re-Enter Password</label>
-                    <input type="password" class="form-control" name="re-password" placeholder="Enter your password again" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Profile Name</label>
-                    <input type="text" class="form-control" name="profilename" placeholder="Enter your profile name" required>
+                    <label class="form-label">Admin code</label>
+                    <input type="text" class="form-control" name="adminCode" placeholder="Type admin code here">
                 </div> -->
-                <button type="submit" class="btn btn-info">Sign up</button>
+                <button type="submit" class="btn btn-info">Register</button>
                 <a href="/login">Have an account?</a>
             </div>
         </div>
