--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -1,7 +1,18 @@
 <%- include("../partials/header.ejs") %>
-<div class="col">
-    <div class="container-fluid py-4">
-        <h1 class="text-white">Add New Artist</h1>
+<div class="col pt-4">
+    <div class="container-fluid">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Songs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/artist/new">Artists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/album/new">Albums</a>
+            </li>
+          </ul>
+        <h1 class="text-white pt-4">Add New Artist</h1>
         <form action="/artist" method="POST">
             <div class="mb-3">
                 <label  class="form-label text-white">Artist Name</label>
@@ -12,7 +23,6 @@
                 <input type="text" class="form-control" name="image" placeholder="Image URL" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <a href="#">Go back</a>
         </form>
     </div>
 </div>
