--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                     <label class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn btn-info">Sign in</button>
+                <button type="submit" class="btn btn-info">Login</button>
                 <a href="/register">No account yet?</a>
             </div>
         </div>
