--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -150,7 +150,7 @@
     font-weight: bold;
     color: #B6B6B6;
 }
-.song--artist:hover, .album--album:hover{
+.song--artist:hover{
     text-decoration: underline;
     font-size: 1.6vh;
     font-weight: bold;
