--- a/views/album/remove.ejs
+++ b/views/album/remove.ejs
@@ -42,12 +42,83 @@
                     <%= allAlbum.artist.name %>
                   </p>
                 </td>
-                <td>
-                  <div class="d-flex justify-content-between align-items-center pt-4">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-info">Edit</button>
-                      <button type="button" class="btn btn-sm btn-outline-danger">Delete</button>
-                    </div>
+                <td> 
+                  <div class="pt-4 text-black">
+                     <!-- Button trigger modal -->
+                     <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal"
+                     data-bs-target="#exampleModal<%= count %>">
+                     Edit
+                   </button>
+                   <!-- Modal -->
+                   <div class="modal fade text-start" id="exampleModal<%= count %>" tabindex="-1"
+                     aria-labelledby="exampleModalLabel" aria-hidden="true">
+                     <div class="modal-dialog modal-xl">
+                       <div class="modal-content">
+                         <div class="modal-header bg-info">
+                           <h5 class="modal-title text-black" id="exampleModalLabel">Edit your album</h5>
+                           <button type="button" class="btn-close" data-bs-dismiss="modal"
+                             aria-label="Close"></button>
+                         </div>
+                         <div class="modal-body text-black text-left">
+                           <form action="/album/<%= allAlbum._id %>?_method=PUT" method="POST"
+                             enctype="multipart/form-data">
+                             <div class="mb-3">
+                               <label class="form-label">Album Name</label>
+                               <input type="text" class="form-control" name="name" placeholder="<%= allAlbum.name %>"
+                                 value="<%= allAlbum.name %>">
+                             </div>
+                             <div class="mb-3">
+                               <label class="form-label">Artist</label>
+                               <input type="text" list="artist" class="form-control" name="artist"
+                                 placeholder="<%= allAlbum.artist.name %>" value="<%= allAlbum.artist.name %>"
+                                 autocomplete="off">
+                               <datalist id="artist">
+                                 <% allArtist.forEach(function(allArtist){ %>
+                                   <option class="list-group-item">
+                                     <%= allArtist.name %>
+                                   </option>
+                                   <% }) %>
+                               </datalist>
+                             </div>
+                             <div class="mb-3">
+                               <label class="form-label">Image</label>
+                               <img src="<%= allAlbum.image %>" height="100px">
+                               <input type="file" class="form-control" name="image" accept='image/*'>
+                             </div>
+                             <div class="modal-footer">
+                               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                               <button type="submit" class="btn btn-primary">Save changes</button>
+                             </div>
+                           </form>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                   <!-- Button trigger modal -->
+                   <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                     data-bs-target="#album<%= count %>">
+                     Delete
+                   </button>
+
+                   <!-- Modal -->
+                   <div class="modal fade" id="album<%= count %>" tabindex="-1" aria-labelledby="exampleModalLabel"
+                     aria-hidden="true">
+                     <div class="modal-dialog">
+                       <div class="modal-content">
+                         <div class="modal-header">
+                           <h5 class="modal-title" id="exampleModalLabel">Do you want to delete this song?</h5>
+                           <button type="button" class="btn-close" data-bs-dismiss="modal"
+                             aria-label="Close"></button>
+                         </div>
+                         <div class="modal-footer">
+                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                           <form action="/album/<%= allAlbum._id %>?_method=DELETE" method="post">
+                             <button type="submit" class="btn btn-danger">Delete</button>
+                           </form>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
                   </div>
                 </td>
               </tr>
