--- a/views/artist/remove.ejs
+++ b/views/artist/remove.ejs
@@ -37,12 +37,10 @@
                   </div>
                 </td>
                 <td>
-                  <div class="d-flex justify-content-between align-items-center pt-4">
-                    <div class="btn-group">
+                    <div class="btn-group pt-4">
                       <button type="button" class="btn btn-sm btn-outline-info">Edit</button>
                       <button type="button" class="btn btn-sm btn-outline-danger">Delete</button>
                     </div>
-                  </div>
                 </td>
               </tr>
             <% }) %>
